No 8.0 and 8.1 support
Our AUHAL module doesn't support 8.1 and 8.0 output, despite CoreAudio does (refs #4896 (closed)).
Our AUHAL module doesn't support 8.1 and 8.0 output, despite CoreAudio does (refs #4896 (closed)).
changed milestone to %2.1.0 release
commit 3e3e5b51 Author: Felix Paul Kühne fkuehne@videolan.org Date: Tue Apr 30 14:45:55 2013 +0200
auhal: add support for 8.0 and 8.1 output (close [#8536](https://code.videolan.org/videolan/vlc/-/issues/8536))
added Status::fixed label
closed
commit 762f742b Author: Felix Paul Kühne fkuehne@videolan.org Date: Tue Apr 30 15:18:16 2013 +0200
auhal: fix compilation on 10.6 and prevent attempts to set it up on those OS X versions (refs [#8536](https://code.videolan.org/videolan/vlc/-/issues/8536))
VideoLAN code repository instance