auhal: add support for 8.0 and 8.1 output (close #8536)